@@ -30,6 +30,7 @@ import java.awt.Dimension;
 import java.awt.Point;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.KeyEvent;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
@@ -39,6 +40,8 @@ import java.util.List;
 import javax.swing.JCheckBoxMenuItem;
 import javax.swing.JMenuItem;
 import javax.swing.JPopupMenu;
+import javax.swing.KeyStroke;
+import javax.swing.text.Caret;
 import javax.swing.text.JTextComponent;
 
 import org.omegat.core.Core;
@@ -48,6 +51,7 @@ import org.omegat.gui.editor.IPopupMenuConstructor;
 import org.omegat.gui.editor.SegmentBuilder;
 import org.omegat.gui.main.DockableScrollPane;
 import org.omegat.gui.main.IMainWindow;
+import org.omegat.gui.shortcuts.PropertiesShortcuts;
 import org.omegat.util.Java8Compat;
 import org.omegat.util.OStrings;
 import org.omegat.util.Preferences;
@@ -265,5 +269,19 @@ public class MultipleTransPane extends EntryInfoThreadPane<List<MultipleTransFou
         notify.addActionListener(e -> Preferences.setPreference(Preferences.NOTIFY_MULTIPLE_TRANSLATIONS,
                 notify.isSelected()));
         menu.add(notify);
+    }
+
+    @Override
+    protected void processKeyEvent(KeyEvent e) {
+        KeyStroke s = KeyStroke.getKeyStrokeForEvent(e);
+        if (s.equals(PropertiesShortcuts.getEditorShortcuts().getKeyStroke("editorContextMenu"))) {
+            JPopupMenu popup = new JPopupMenu();
+            Caret caret = getCaret();
+            Point p = caret == null ? getMousePosition() : caret.getMagicCaretPosition();
+            populateContextMenu(popup, Java8Compat.viewToModel(MultipleTransPane.this, p));
+            popup.show(this, (int) p.getX(), (int) p.getY());
+            e.consume();
+        }
+        super.processKeyEvent(e);
     }
 }
