@@ -15,6 +15,8 @@
   - Added a shortcut to jump to the selected search result (Ctrl+J by default).
   https://sourceforge.net/p/omegat/feature-requests/1416/
   
+  - Context menu is available on most panels (Glossary, Fuzzy Matches, Multiple Translations)
+  https://sourceforge.net/p/omegat/feature-requests/1415/
 
 ----------------------------------------------------------------------
  OmegaT 4.2.0 (2019-04-23)
